--- a/config/mcl_param/test_localization2.yaml
+++ b/config/mcl_param/test_localization2.yaml
@@ -1,19 +1,18 @@
+#2021.10.7 testing
 mcl_3dl:
   map_frame: "map"
   accum_cloud: 2
   lpf_step: 1.0
-  #dist_weight_x: 1.0
-  #dist_weight_y: 1.0
   dist_weight_z: 2.0
+  odom_err_lin_lin: 0.2
+  odom_err_lin_ang: 0.07
+  odom_err_ang_lin: 0.07
+  odom_err_ang_ang: 0.07
+  odom_err_integ_lin_tc: 0.1
+  odom_err_integ_lin_sigma: 10.0
+  odom_err_integ_ang_tc: 0.1
+  odom_err_integ_ang_sigma: 10.0
   likelihood:
-    odom_err_lin_lin: 0.2
-    odom_err_lin_ang: 0.05
-    odom_err_ang_lin: 0.05
-    odom_err_ang_ang: 0.05
-    odom_err_integ_lin_tc: 10.0
-    odom_err_integ_lin_sigma: 100.0
-    odom_err_integ_ang_tc: 10.0
-    odom_err_integ_ang_sigma: 100.0
     match_dist_min: 0.5
     match_output_dist: 0.3
     num_points: 1000
@@ -21,8 +20,10 @@ mcl_3dl:
   beam:
     clip_far: 100.0
     clip_near: 5.0
-    clip_z_min: -20.0
-    clip_z_max: 30.0
+    clip_z_min: 20.0
+    clip_z_max: -8.0
+
+    
 obj_to_pointcloud:
   frame_id: "map"
   points_per_meter_sq: 1200.0
@@ -30,4 +31,3 @@ obj_to_pointcloud:
 pcd_to_pointcloud:
   frame_id: "map"
   latch: true
-
