--- a/config/mcl_param/test_localization4.yaml
+++ b/config/mcl_param/test_localization4.yaml
@@ -1,19 +1,19 @@
-#2021.10.8 直進部分で１ｍ程度ずれたが完走できた
+#2021.10.8 testing
 mcl_3dl:
   map_frame: "map"
   accum_cloud: 2
   lpf_step: 1.0
   dist_weight_z: 2.0
-  odom_err_lin_lin: 0.3 
+  odom_err_lin_lin: 0.4 #0.3
   odom_err_lin_ang: 0.07
-  odom_err_ang_lin: 0.15 #0.1
+  odom_err_ang_lin: 0.05 #0.15 #0.1
   odom_err_ang_ang: 0.05 #0.1 
-  odom_err_integ_lin_tc: 10.0 #0.1
-  odom_err_integ_lin_sigma: 100.0 #10.0
-  odom_err_integ_ang_tc: 10.0 #0.1
-  odom_err_integ_ang_sigma: 100.0 #10.0
+  odom_err_integ_lin_tc: 10.0 
+  odom_err_integ_lin_sigma: 100.0 
+  odom_err_integ_ang_tc: 10.0 
+  odom_err_integ_ang_sigma: 100.0 
   likelihood:
-    match_dist_min: 0.5
+    match_dist_min: 0.3 #0.5
     match_output_dist: 0.3
     num_points: 1000
     num_points_global: 500
