--- a/config/nav_param/local_costmap_params.yaml
+++ b/config/nav_param/local_costmap_params.yaml
@@ -1,5 +1,5 @@
 my_costmap:
-  plugins: 
+  plugins:
     - {name: obstacle_layer, type: 'costmap_2d::ObstacleLayer'}
     - {name: inflation_layer, type: "costmap_2d::InflationLayer"}
   global_frame: map
@@ -21,5 +21,8 @@ my_costmap:
       data_type: LaserScan
       marking: true
       clearing: true
+      obstacle_range : 5.5
+      raytrace_range : 6.0
   inflation_layer:
-    inflation_radius: 1.3
+    inflation_radius: 2.0
+    cost_scaling_factor : 5
