--- a/config/nav_param/local_costmap_params.yaml
+++ b/config/nav_param/local_costmap_params.yaml
@@ -19,6 +19,12 @@ my_costmap:
       sensor_frame: camera_link
       topic: scan
       data_type: LaserScan
+
+      #sensor_frame: velodyne
+      #topic: velodyne_points
+      #data_type: PointCloud2
+      #min_obstacle_height: 0.2
+      
       marking: true
       clearing: true
   inflation_layer:
