--- a/config/nav_param/local_costmap_params.yaml
+++ b/config/nav_param/local_costmap_params.yaml
@@ -16,14 +16,14 @@ my_costmap:
   obstacle_layer:
     observation_sources: laser_scan_sensor
     laser_scan_sensor:
-      sensor_frame: camera_link
-      topic: scan
-      data_type: LaserScan
+      #sensor_frame: camera_link
+      #topic: scan
+      #data_type: LaserScan
 
-      #sensor_frame: velodyne
-      #topic: velodyne_points
-      #data_type: PointCloud2
-      #min_obstacle_height: 0.2
+      sensor_frame: velodyne_link
+      topic: velodyne_points
+      data_type: PointCloud2
+      min_obstacle_height: 0.2
       
       marking: true
       clearing: true
