--- a/config/nav_param/local_costmap_params.yaml
+++ b/config/nav_param/local_costmap_params.yaml
@@ -7,8 +7,8 @@ my_costmap:
   footprint: [[0.4,0.4], [-0.45,0.4], [-0.45,-0.4], [0.4,-0.4]]
   #footprint: [[-0.65, 0], [-0.45, 0.45], [0, 0.65], [0.45, 0.45], [0.65, 0], [0.45, -0.45], [0, -0.65], [-0.45, -0.45]]
   rolling_window: true
-  width: 100.0
-  height: 100.0
+  width: 30.0
+  height: 30.0
   resolution: 0.1
   update_frequency: 20.0
   publish_frequency: 20.0
@@ -29,3 +29,5 @@ my_costmap:
       clearing: true
   inflation_layer:
     inflation_radius: 1.3
+  path_costmap:
+    cost_path_width: 30.0
