--- a/config/nav_param/local_costmap_params.yaml
+++ b/config/nav_param/local_costmap_params.yaml
@@ -10,20 +10,22 @@ my_costmap:
   width: 30.0
   height: 30.0
   resolution: 0.1
-  update_frequency: 20.0
-  publish_frequency: 20.0
+  update_frequency: 5.0
+  publish_frequency: 5.0
 
   obstacle_layer:
     observation_sources: laser_scan_sensor
     laser_scan_sensor:
-      #sensor_frame: camera_link
-      #topic: scan
-      #data_type: LaserScan
+      sensor_frame: camera_link
+      topic: scan
+      data_type: LaserScan
+      obstacle_range: 10.0
+      raytrace_range: 10.0
 
-      sensor_frame: velodyne_link
-      topic: velodyne_points
-      data_type: PointCloud2
-      min_obstacle_height: 0.2
+      #sensor_frame: velodyne_link
+      #topic: velodyne_points
+      #data_type: PointCloud2
+      #min_obstacle_height: 0.2
       
       marking: true
       clearing: true
