シミュレーションを使わないときもrobot modelを表示 URDFを整備

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,14 +162,14 @@ set(HEADERS include/kcctcore/TFtoPose.h)
 add_executable(navigation_master src/navigation_master)
 target_link_libraries(navigation_master ${catkin_LIBRARIES})
 
-add_executable(robot_model_node src/robot_model.cpp)
-target_link_libraries(robot_model_node ${catkin_LIBRARIES})
-
 add_executable(teensy_handler src/teensy_handler.cpp)
 target_link_libraries(teensy_handler ${catkin_LIBRARIES})
 
 add_executable(floor_tf_broadcaster src/floor_tf_broadcaster.cpp)
 target_link_libraries(floor_tf_broadcaster ${catkin_LIBRARIES})
+
+add_executable(joint_pub src/joint_pub.cpp)
+target_link_libraries(joint_pub ${catkin_LIBRARIES})
 
 # all install targets should use catkin DESTINATION variables
 # See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
