--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   tf
+  laser_geometry
 )
 
 ## System dependencies are found with CMake's conventions
@@ -170,6 +171,9 @@ target_link_libraries(floor_tf_broadcaster ${catkin_LIBRARIES})
 
 add_executable(joint_pub src/joint_pub.cpp)
 target_link_libraries(joint_pub ${catkin_LIBRARIES})
+
+add_executable(laser2pc src/laser2pc.cpp)
+target_link_libraries(laser2pc ${catkin_LIBRARIES})
 
 # all install targets should use catkin DESTINATION variables
 # See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
